src/Movimientos.css
.tabla-movimientos{
    width: 700px;
    margin-top:50px;
    margin-bottom:5px;
    caption-side: bottom;
    margin-left: auto;
    margin-right: auto;
    border-collapse: collapse;
}


.tabla-movimientos button {
    padding: 0 10px;
}

td, th {
    white-space: nowrap;
}

.tabla-movimientos td, .tabla-movimientos th {
    border: 2px solid black;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.tabla-movimientos  th {
    background-color: rgb(87, 85, 82);
}

.tabla-movimientos tr:hover {
    background-color: rgb(87, 85, 82);
}

.form-nuevo-movimiento input{
    margin-right: 5px;
}


.divNuevoMov{
    padding: 10px;
}

.divNavegacionPaginas button {
    margin-top: 5px;
    margin: 2px;
    padding: 0 20px;
}


.columnaFecha-mov{
    min-width: 150px;
    max-width: 150px;
}

.font-columnaFecha{
    font-size: 12px;
}

.columnaConcepto-mov{
    min-width:200px;
    max-width: 200px;
    text-overflow: ellipsis;
    overflow: hidden;
}

.columnaValor-mov{
    min-width: 150px;
    max-width: 150px;
}

.columnaEliminar-mov{
    max-width: 90px;
    min-width: 90px;
}

.columnaCaja-mov{
    min-width: 150px;
    max-width: 150px;
    text-overflow: ellipsis;
    overflow: hidden;
}

.font-columnaCaja{
    font-size: 15px;
}

.errorInputVisible{
    color: red; 
    display: block;
}

.errorInputOculto{
    display: none;
}

.divNuevoMov button{
    padding: 5px;
    margin-left: 5px;
}

.divNuevoMov input {
    padding: 5px;
}

.divNuevoMov select {
    padding: 5px;
    min-width: 100px;
    max-width: 100px;
    text-align: center;
    overflow: hidden;
}

.divNuevoMov option {
    max-width: 100px;
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: nowrap; 
}

.ingreso {
    background-color: green;
    width: 70px;
}

.egreso {
    background-color: red;
    width: 70px;
}

.divSignomas{
    color: rgb(178, 231, 178);
    display: inline;
    width: 20px;
}
.divSignomenos{
    color: rgb(245, 167, 167);
    display: inline;
    width: 20px;
}


.divCargando{
    font-size:12px;
    height: 20px;
}

.p-nombre {
    text-overflow: ellipsis;
    overflow: hidden;
 }

  .columnaEliminar-mov p, .desc-oculto{
    display: none;
  }

  .container-nuevo-mov{
    display: flex;
    justify-content: center;
  }

  .conteiner-divs-cargando{
    display:flex;
    justify-content: center;
    gap: 5px;
  }

  @media only screen and (max-width: 772px){

    .tabla-movimientos{
        width: 560px;
    }

    .columnaFecha-mov{
        min-width: 100px;
        max-width: 100px;
    }
    
    .font-columnaFecha{
        font-size: 12px;
    }
    
    .columnaConcepto-mov{
        min-width:150px;
        max-width: 150px;
    }
    
    .columnaValor-mov{
        min-width: 130px;
        max-width: 130px;
    }
    
    .columnaEliminar-mov{
        max-width: 80px;
        min-width: 80px;
    }
    
    .columnaCaja-mov{
        min-width: 100px;
        max-width: 100px;
    }
    
    .font-columnaCaja{
        font-size: 15px;
    }


    .tabla-movimientos td, .tabla-movimientos th {
        padding-left: 5px;
        padding-right: 5px;
        padding-top: 2px;
        padding-bottom: 2px;
    }


    /*parte del nuevo movimiento*/
    .divNuevoMov form {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .container-nuevo-mov{
        width: 200px;
        display: flex;
        flex-direction: column;
        gap: 4px;
    }

    .divValorInput{
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .inputValor{
        width: 178px;
    }

    .form-nuevo-movimiento input{
        margin-right: 0px;
    }

    .divNuevoMov select {
        min-width: 200px;
        max-width: 200px;
    }

    .form-nuevo-movimiento button {
        width: 200px;
        margin: 0px;
    }

    .conceptoInput{
        min-width: 200px;
        max-width: 200px;
    }

    .errorInput{
        min-width: 200px;
        max-width: 200px;
    }


  }

  @media only screen and (max-width: 580px){

    .tabla-movimientos{
        width: 300px;
    }

    .tabla-movimientos td, .tabla-movimientos th {
        border: 0px;
    }

    .tabla-movimientos thead {
        display: none;
    }



    .tabla-movimientos tr {
        margin-bottom: 8px;
        border: 1px solid white;
        display: flex;
        flex-direction: column;
        align-items: center;
        
    }

    
    .columnaConcepto-mov{
        font-size: 25px;
        min-width:300px;
        max-width: 300px;
        
    }

    .columnaValor-mov{
        font-size:25px;
    }

    .columnaEliminar-mov{
        max-width: 300px;
        min-width: 300px;
        border-top: 1px solid rgb(133, 127, 127);
    }

    .columnaEliminar-mov button{
        font-size: 15px;
        padding: 5px 20px;

    }

    .columnaEliminar-mov p, .columnaEliminar-mov button{
        display: inline;
    }

    .desc-oculto{
        display: inline; 
    }

    .columnaCaja-mov{
        min-width: 300px;
        max-width: 300px;
    }

    .columnaCaja-mov span{
        display: inline;
    }

  }

